--- a/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
@@ -35,8 +35,27 @@
         @Html.Partial("Navigation")
     </div>
 </div>
+<!-- Modal Navigation -->
+<div id="ModalUser" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body" id="ModalUserBody">
 
+    </div>
+</div>
 
+<script>
+    function showClasses() {
+        $.get('/User/Classes/Classes', function (result) {
+            UIkit.modal(document.getElementById('ModalUser')).show();
+            $('#ModalUserBody').html(result);
+        });
+    }
+    function createClasses() {
+        $.get('/User/Classes/Create', function (result) {
+            UIkit.modal(document.getElementById('ModalUser')).show();
+            $('#ModalUserBody').html(result);
+        });
+    }
+</script>
 @RenderSection("Scripts", false)
 
 
