--- a/AminWeb/Areas/User/Views/Video/YourVideos.cshtml
+++ b/AminWeb/Areas/User/Views/Video/YourVideos.cshtml
@@ -1,193 +1,11 @@
 ﻿
 @{
-    ViewBag.Title = "YourVideos";
+    ViewBag.Title = "ویدیوهای شما";
     ViewBag.Content = "ویدیو هایی که شما آپلود کرده اید";
     Layout = "~/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
-<div id="Modal-AddVideo" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body ">
-        <h3>
-            آپلود ویدیو جدید
-        </h3>
 
-        <div class="form-group">
-            <label for="Title">تیتر ویدیو</label>
-            <div class="input-group">
-                <input type="text" name="Title" />
-            </div>
-            <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
-        </div>
-
-        <div class="form-group">
-            <label for="MainImage">عکس</label>
-            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
-                <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle">عکس خود را اینجا بیاندازید و یا</span>
-                <div uk-form-custom>
-                    <input type="file" name="MainImage">
-                    <span class="blue">کلیک کنید</span>
-                </div>
-            </div>
-            <span role="alert" class="alert">لطفا عکس خود را آپلود کنید</span>
-        </div>
-
-        <div class="form-group">
-            <label for="Video">ویدیو</label>
-            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
-                <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle">ویدیو خود را اینجا بیاندازید و یا</span>
-                <div uk-form-custom>
-                    <input type="file" name="Video">
-                    <span class="blue">کلیک کنید</span>
-                </div>
-            </div>
-            <span role="alert" class="alert">لطفا ویدیو خود را آپلود کنید</span>
-        </div>
-
-        <!-- #region Upload -->
-
-        <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
-
-        <script>
-            import UIkit from "uikit";
-
-
-            var bar = document.getElementById('js-progressbar');
-
-            UIkit.upload('.js-upload', {
-
-                url: '', // <-----------------------------------------------------------------{ URL }
-                multiple: false,
-
-                beforeSend: function () {
-                    console.log('beforeSend', arguments);
-                },
-                beforeAll: function () {
-                    console.log('beforeAll', arguments);
-                },
-                load: function () {
-                    console.log('load', arguments);
-                },
-                error: function () {
-                    console.log('error', arguments);
-                    UIkit.notification('در آپلود فایل مشکلی پیش آمد');
-
-                },
-                complete: function () {
-                    console.log('complete', arguments);
-                },
-
-                loadStart: function (e) {
-                    console.log('loadStart', arguments);
-
-                    bar.removeAttribute('hidden');
-                    bar.max = e.total;
-                    bar.value = e.loaded;
-                },
-
-                progress: function (e) {
-                    console.log('progress', arguments);
-
-                    bar.max = e.total;
-                    bar.value = e.loaded;
-                },
-
-                loadEnd: function (e) {
-                    console.log('loadEnd', arguments);
-
-                    bar.max = e.total;
-                    bar.value = e.loaded;
-                },
-
-                completeAll: function () {
-                    console.log('completeAll', arguments);
-
-                    setTimeout(function () {
-                        bar.setAttribute('hidden', 'hidden');
-                    }, 1000);
-
-                    UIkit.notification('آپلود شد');
-                }
-
-            });
-
-        </script>
-
-        <!-- #endregion -->
-
-        <div class="form-group">
-            <label for="Description">توضیحات</label>
-            <textarea type="text" name="Description"></textarea>
-            <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
-        </div>
-
-        <div class="form-group">
-            <label for="Price">قیمت به تومان</label>
-            <div class="input-group">
-                <input type="number" name="Price" />
-            </div>
-            <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
-        </div>
-
-        <div class="uk-margin-top uk-margin-bottom">
-            <label dir="rtl">
-                <input class="uk-checkbox" type="checkbox">
-                میخواهم درصدی از درامد این ویدیو به خیریه
-                <a href="#" class="blue">نام خیریه</a>
-                اهدا شود
-            </label>
-        </div>
-
-        <div class="form-group">
-            <label for="Playlist">کلاس</label>
-            <div class="row-reverse">
-                <select name="Playlist" class="uk-width-2-3 uk-margin-small-left" dir="rtl">
-                    <option>علوم</option>
-                    <option>ریاضی</option>
-                    <option>مدنی</option>
-                </select>
-                <button uk-icon="plus" onclick="createClasses()" type="button" uk-tooltip="اضافه کردن کلاس جدید" class="uk-margin-auto-right"></button>
-            </div>
-            <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
-        </div>
-
-        <div class="form-group">
-            <label for="Keywords">کلمات کلیدی</label>
-            <div class="input-group">
-                <input type="text" name="Keywords" placeholder="علوم. ریاضی. فیزیک" />
-            </div>
-            <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
-        </div>
-
-
-        <div class="form-group">
-            <label for="Certificate">در صورت ارایه مدرک، آن را آپلود کنید</label>
-            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
-                <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle">فایل خود را اینجا بیاندازید و یا</span>
-                <div uk-form-custom>
-                    <input type="file" name="Certificate">
-                    <span class="blue">کلیک کنید</span>
-                </div>
-            </div>
-            <span role="alert" class="alert">فایل شما معتبر نمی باشد</span>
-        </div>
-
-        <div class="row-reverse uk-margin-medium-top">
-            <button class="btn-primary">
-                ویرایش
-            </button>
-        </div>
-
-    </div>
-</div>
-
-<div id="Modal-Categories" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body column">
-       
-    </div>
-</div>
 
 
 
@@ -196,7 +14,7 @@
         ویدیو های شما
     </h3>
     <div class="row uk-margin-auto-right">
-        <a href="#Modal-AddVideo" uk-toggle class="center" uk-icon="icon:addVideo;ratio:1.2" uk-tooltip="آپلود ویدیو">
+        <a  onclick="CreateVideo()" class="center" uk-icon="icon:addVideo;ratio:1.2" uk-tooltip="آپلود ویدیو">
 
         </a>
         <a onclick="showClasses()" class="center uk-margin-left" uk-icon="icon:class;ratio:1.2" uk-tooltip="کلاس ها">
