--- a/AminWeb/Areas/Admin/Views/Catagory/Create.cshtml
+++ b/AminWeb/Areas/Admin/Views/Catagory/Create.cshtml
@@ -2,21 +2,17 @@
 @using (Ajax.BeginForm("Create", "Catagory", new AjaxOptions()
 {
     HttpMethod = "POST",
-    OnComplete = "success()",
     OnSuccess = "LoadingEnd('#createCatagory')",
-    UpdateTargetId = "listCat"
+    UpdateTargetId = "createCatagory",
 },
     htmlAttributes: new { @id = "createCatagory" }))
-
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.ParentId)
     <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <label for="name">نام گروه</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", minlength = "5", required = "required" } })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
