--- a/AminWeb/Areas/Admin/Views/Catagory/Index.cshtml
+++ b/AminWeb/Areas/Admin/Views/Catagory/Index.cshtml
@@ -4,6 +4,16 @@
     ViewBag.Title = "دسته بندی";
 }
 <div class="card flex-div border-0 shadow">
+
+
+
+    <div class="card-header bg-white">
+        <div class="row justify-content-end">
+            <div class="col-md-2 col-3 pl-2 pr-0">
+                <a onclick="create()" class="btn btn-success btn-sm text-white float-left"><i class="fas fa-plus-circle"></i>افزودن</a>
+            </div>
+        </div>
+    </div>
     <div id="listCat">
         @Html.Action("ListCat", "Catagory")
     </div>
@@ -15,19 +25,8 @@
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            </div>
-            <div class="modal-body" id="myModalBody">
-                ...
-            </div>
-        </div>
-    </div>
-</div>
+
+
 
 
 
@@ -38,10 +37,9 @@
     <script src="~/Areas/Admin/Content/bootstrap/js/jquery.unobtrusive-ajax.min.js"></script>
 
 
-
     <script>
-        function create(id) {
-            $.get("/Admin/Catagory/Create/" + id,
+        function create() {
+            $.get("/Admin/Catagory/Create",
                 function (result) {
                     $("#myModal").modal('show');
                     $("#myModalBody").html(result);
@@ -57,7 +55,7 @@
             );
         };
         function subCategory(id) {
-            $.get("/Admin/Catagory/ListCat?id=" + id,
+            $.get("/Admin/Catagory/SubCategory?id=" + id,
                 function (result) {
                     $("#myModal").modal('show');
                     $("#myModalBody").html(result);
@@ -77,6 +75,6 @@
                 })
             }
         }
-       
+
     </script>
 }
