--- a/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
@@ -55,13 +55,24 @@
             $('#ModalUserBody').html(result);
         });
     }
+    function editClasses(id) {
+        $.get('/User/Classes/Edit/' + id, function (result) {
+            UIkit.modal(document.getElementById('ModalUser')).show();
+            $('#ModalUserBody').html(result);
+        });
+    }
     function CreateVideo() {
         $.get('/User/Video/Create', function (result) {
             UIkit.modal(document.getElementById('ModalUser')).show();
             $('#ModalUserBody').html(result);
         });
     }
+
+
+
 </script>
+
+
 @RenderSection("Scripts", false)
 
 
