--- a/AminWeb/Views/Video/VideoView.cshtml
+++ b/AminWeb/Views/Video/VideoView.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "نام ویدیو";
     ViewBag.Content = "نام ویدیو آموزشی، آپلود کننده آن و تاریخ آپلود";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -124,25 +123,4 @@
     </div>
 </div>
 
-<script>
-    function fallbackCopyTextToClipboard(text) {
-        var textArea = document.createElement("textarea");
-        textArea.value = text;
-
-        // Avoid scrolling to bottom
-        textArea.style.top = "0";
-        textArea.style.left = "0";
-        textArea.style.position = "fixed";
-
-        document.body.appendChild(textArea);
-        textArea.focus();
-        textArea.select();
-
-        try {
-            var successful = document.execCommand('copy');
-        } catch (err) {
-        }
-
-        document.body.removeChild(textArea);
-    }
-</script>
+<script src="~/Scripts/UIScripts/CopyToClipboard.js"></script>
